--- a/app/dev/src/styles/site.css
+++ b/app/dev/src/styles/site.css
@@ -131,15 +131,27 @@ main.panel {
   border-radius: 0;
 }
 @media (max-width: 900px) {
-  .header[data-stuck] { grid-template-areas: "nav" "bar"; }
-  .header[data-stuck] > .header__crumbs,
-  .header[data-stuck] > .header__logo{
+  .header { grid-template-areas: "nav" "bar"; }
+  .header[data-stuck] > .header__crumbs {
+    display: none;
+  }
+  
+  .header__logo,
+  .header__logo img{
     display: none;
   }
 }
 
 
 /* ====== HEADER - LOGO ================= */
+
+
+
+
+@media (min-width: 900px) { 
+  .header[data-stuck] > .header__logo{
+  border-radius: 0;
+}
 .header__logo {
   display: inline-flex;
   align-items: center;
@@ -153,26 +165,15 @@ main.panel {
   background: var(--card-surface--dark);
   border-top-left-radius: var(--radius-xl);
 }
-@media (max-width: 900px) {
-  .header__logo { 
-    border-top-left-radius: 0;
-  }
-}
-.header[data-stuck] > .header__logo{
-  border-radius: 0;
-}
 
-.header__logo img {
+  .header__logo img {
   display: block;
   inline-size: auto;
   block-size: var(--site-logo--size);
   filter: var(--site-logo--filter);
 }
-@media (max-width: 900px) {
-  .header__logo img { 
-    block-size: calc(var(--site-logo--size)); 
-  }
 }
+
 
 
 /* ====== HEADER - NAV ================= */
